--- a/.github/workflows/quick-tests.yml
+++ b/.github/workflows/quick-tests.yml
@@ -25,7 +25,7 @@ jobs:
   # Backend Unit Tests Only
   test-backend:
     name: Backend Unit Tests
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, eks, singapore]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -57,7 +57,7 @@ jobs:
   # Frontend Unit Tests Only
   test-frontend:
     name: Frontend Unit Tests
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, eks, singapore]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -88,7 +88,7 @@ jobs:
   test-summary:
     name: Test Summary
     needs: [test-backend, test-frontend]
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, eks, singapore]
     if: always()
     steps:
       - name: Check test results
