--- a/main_backend/src/main/resources/application.properties
+++ b/main_backend/src/main/resources/application.properties
@@ -36,7 +36,7 @@ logging.level.com.concert=DEBUG
 aws.region=${AWS_REGION:ap-southeast-1}
 aws.s3.event-pictures-bucket=${AWS_S3_EVENT_PICTURES_BUCKET:concert-event-pictures-singapore-161326240347}
 aws.s3.user-avatars-bucket=${AWS_S3_USER_AVATARS_BUCKET:concert-user-avatars-singapore-161326240347}
-aws.cloudfront.images-url=${AWS_CLOUDFRONT_IMAGES_URL:https://d3qkurc1gwuwno.cloudfront.net}
+aws.s3.images-url=${AWS_S3_IMAGES_URL:https://concert-event-pictures-singapore-161326240347.s3.ap-southeast-1.amazonaws.com}
 aws.s3.presigned-urls-enabled=${AWS_S3_PRESIGNED_URLS_ENABLED:true}
 aws.s3.presigned-url-expiration-minutes=${AWS_S3_PRESIGNED_URL_EXPIRATION_MINUTES:60}
 aws.s3.public-access=${AWS_S3_PUBLIC_ACCESS:false}
