--- a/.github/workflows/eks-runner.yml
+++ b/.github/workflows/eks-runner.yml
@@ -5,38 +5,93 @@ on:
     branches: [main, develop]
   pull_request:
     branches: [main]
+  workflow_dispatch:
+
+concurrency:
+  group: eks-ci-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   backend-test:
-    runs-on: [self-hosted, eks, singapore]
+    name: Backend Tests (EKS)
+    runs-on: [self-hosted, linux, x64, eks, singapore]
     
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
       
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'temurin'
+          cache: maven
       
       - name: Test Backend
         run: |
           cd main_backend
-          mvn clean test
+          mvn clean test -Dspring.profiles.active=test
+        env:
+          SPRING_PROFILES_ACTIVE: test
+
+      - name: Upload test results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: backend-test-results-eks
+          path: main_backend/target/surefire-reports/
+          retention-days: 3
 
   frontend-test:
-    runs-on: [self-hosted, eks, singapore]
+    name: Frontend Tests (EKS)
+    runs-on: [self-hosted, linux, x64, eks, singapore]
     
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
       
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: main_frontend/concert1/package-lock.json
+      
+      - name: Install dependencies
+        run: |
+          cd main_frontend/concert1
+          npm ci --legacy-peer-deps
       
       - name: Test Frontend
         run: |
           cd main_frontend/concert1
-          npm ci
-          npm test
+          npm run test
+
+      - name: Upload test results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: frontend-test-results-eks
+          path: main_frontend/concert1/coverage/
+          retention-days: 3
+
+  test-summary:
+    name: EKS Test Summary
+    needs: [backend-test, frontend-test]
+    runs-on: [self-hosted, linux, x64, eks, singapore]
+    if: always()
+    steps:
+      - name: Check test results
+        run: |
+          echo "📊 EKS Test Pipeline Summary"
+          echo "============================="
+          echo "Backend Tests: ${{ needs.backend-test.result }}"
+          echo "Frontend Tests: ${{ needs.frontend-test.result }}"
+          echo ""
+          if [ "${{ needs.backend-test.result }}" == "success" ] && [ "${{ needs.frontend-test.result }}" == "success" ]; then
+            echo "✅ All EKS tests passed!"
+            exit 0
+          else
+            echo "❌ Some EKS tests failed"
+            exit 1
+          fi
