--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -2,7 +2,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: concert-backend
-  namespace: default
 spec:
   replicas: 2
   selector:
@@ -20,28 +19,26 @@ spec:
         - containerPort: 8080
         env:
         - name: SPRING_DATASOURCE_URL
-          value: "jdbc:mysql://concert-prod-db.csfsyoiy61fp.ap-southeast-1.rds.amazonaws.com:3306/concert"
+          value: "jdbc:mysql://mysql:3306/concert_db"
         - name: SPRING_DATASOURCE_USERNAME
-          value: "admin"
+          value: "root"
         - name: SPRING_DATASOURCE_PASSWORD
-          value: "Concert2024!SecurePass"
+          value: "rootpassword"
         - name: AWS_REGION
           value: "ap-southeast-1"
-        - name: AWS_S3_BUCKET_EVENT_PICTURES
+        - name: AWS_S3_EVENT_PICTURES_BUCKET
           value: "concert-event-pictures-singapore-161326240347"
-        - name: AWS_S3_BUCKET_USER_AVATARS
-          value: "concert-user-avatars-singapore-161326240347"
+        - name: AWS_S3_IMAGES_URL
+          value: "https://dzh397ixo71bk.cloudfront.net"
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: concert-backend
-  namespace: default
 spec:
   type: LoadBalancer
   ports:
   - port: 80
     targetPort: 8080
-    protocol: TCP
   selector:
     app: concert-backend
