--- a/.github/workflows/quick-tests.yml
+++ b/.github/workflows/quick-tests.yml
@@ -24,7 +24,7 @@ concurrency:
 jobs:
   test-backend:
     name: Backend Unit Tests
-    runs-on: ubuntu-20.04
+    runs-on: [self-hosted, linux, x64, eks, singapore]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -53,7 +53,7 @@ jobs:
 
   test-frontend:
     name: Frontend Unit Tests
-    runs-on: ubuntu-20.04
+    runs-on: [self-hosted, linux, x64, eks, singapore]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -86,7 +86,7 @@ jobs:
   test-summary:
     name: Test Summary
     needs: [test-backend, test-frontend]
-    runs-on: ubuntu-20.04
+    runs-on: [self-hosted, linux, x64, eks, singapore]
     if: always()
     steps:
       - name: Check test results
