--- a/.github/workflows/full-pipeline.yml
+++ b/.github/workflows/full-pipeline.yml
@@ -36,7 +36,7 @@ jobs:
   # ============================================
   build-backend:
     name: Build Backend (Maven)
-    runs-on: [self-hosted, linux, x64, eks, singapore]
+    runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.version.outputs.version }}
     steps:
@@ -77,7 +77,7 @@ jobs:
   # ============================================
   build-frontend:
     name: Build Frontend (Node.js)
-    runs-on: [self-hosted, linux, x64, eks, singapore]
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -113,7 +113,7 @@ jobs:
   # ============================================
   test-backend-unit:
     name: Backend Unit Tests
-    runs-on: [self-hosted, linux, x64, eks, singapore]
+    runs-on: ubuntu-latest
     needs: build-backend
     services:
       redis:
@@ -180,7 +180,7 @@ jobs:
 
   test-frontend-unit:
     name: Frontend Unit Tests
-    runs-on: [self-hosted, linux, x64, eks, singapore]
+    runs-on: ubuntu-latest
     needs: build-frontend
     steps:
       - name: Checkout code
@@ -221,7 +221,7 @@ jobs:
 
   test-frontend-e2e:
     name: Frontend E2E Tests
-    runs-on: [self-hosted, linux, x64, eks, singapore]
+    runs-on: ubuntu-latest
     needs: [build-backend, build-frontend, test-frontend-unit]
     services:
       mysql:
@@ -463,7 +463,7 @@ jobs:
   # ============================================
   test-backend-integration:
     name: Backend Integration Tests
-    runs-on: [self-hosted, linux, x64, eks, singapore]
+    runs-on: ubuntu-latest
     needs: test-backend-unit
     services:
       mysql:
@@ -532,7 +532,7 @@ jobs:
   # ============================================
   code-quality:
     name: Code Quality Analysis
-    runs-on: [self-hosted, linux, x64, eks, singapore]
+    runs-on: ubuntu-latest
     needs: [test-backend-unit, test-frontend-unit]
     steps:
       - name: Checkout code
@@ -567,7 +567,7 @@ jobs:
   # ============================================
   build-docker:
     name: Build Docker Images
-    runs-on: [self-hosted, linux, x64, eks, singapore]
+    runs-on: ubuntu-latest
     needs: [test-backend-unit, test-frontend-unit, code-quality]
     permissions:
       contents: read
@@ -805,7 +805,7 @@ jobs:
   pipeline-summary:
     name: Pipeline Summary
     needs: [build-backend, build-frontend, test-backend-unit, test-frontend-unit, test-frontend-e2e, code-quality]
-    runs-on: [self-hosted, linux, x64, eks, singapore]
+    runs-on: ubuntu-latest
     if: always()
     steps:
       - name: Generate summary
