--- a/.github/workflows/full-pipeline.yml
+++ b/.github/workflows/full-pipeline.yml
@@ -589,26 +589,25 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ steps.lowercase.outputs.owner }}
+          username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-          logout: false
 
       - name: Verify GHCR authentication
         run: |
           echo "Testing GHCR authentication..."
-          echo "Username: ${{ steps.lowercase.outputs.owner }}"
-          echo "Token length: ${#GITHUB_TOKEN}"
-          docker pull hello-world || true
-          echo "Login successful for user: ${{ steps.lowercase.outputs.owner }}"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          echo "Username: ${{ github.actor }}"
+          echo "Registry: ghcr.io"
+          echo "Repository: ${{ github.repository }}"
+          docker info
+          echo "✅ Docker login successful"
 
-      - name: Check token permissions
+      - name: Check repository permissions
         run: |
-          echo "Checking if token has package write permissions..."
-          curl -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-               -H "Accept: application/vnd.github.v3+json" \
-               https://api.github.com/user/packages?package_type=container || true
+          echo "Checking repository and package permissions..."
+          echo "Repository: ${{ github.repository }}"
+          echo "Actor: ${{ github.actor }}"
+          echo "Event: ${{ github.event_name }}"
+          echo "Ref: ${{ github.ref }}"
 
       - name: Extract branch name
         id: branch
