--- a/.github/workflows/complete-pipeline.yml
+++ b/.github/workflows/complete-pipeline.yml
@@ -14,7 +14,7 @@ concurrency:
 jobs:
   unit-tests-backend:
     name: Backend Unit Tests
-    runs-on: [self-hosted, Linux, ARM64]
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       
@@ -40,7 +40,7 @@ jobs:
 
   unit-tests-frontend:
     name: Frontend Unit Tests
-    runs-on: [self-hosted, Linux, ARM64]
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       
@@ -66,7 +66,7 @@ jobs:
   e2e-tests:
     name: E2E Tests
     needs: [unit-tests-backend, unit-tests-frontend]
-    runs-on: [self-hosted, Linux, ARM64]
+    runs-on: ubuntu-latest
     services:
       mysql:
         image: mysql:8.0
@@ -183,7 +183,7 @@ jobs:
   k8s-deploy:
     name: K8s Deployment
     needs: [e2e-tests]
-    runs-on: [self-hosted, Linux, ARM64]
+    runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop'
     steps:
       - uses: actions/checkout@v4
@@ -206,7 +206,7 @@ jobs:
   summary:
     name: Pipeline Summary
     needs: [unit-tests-backend, unit-tests-frontend, e2e-tests, k8s-deploy]
-    runs-on: [self-hosted, Linux, ARM64]
+    runs-on: ubuntu-latest
     if: always()
     steps:
       - name: Summary
