--- a/.github/workflows/simple-test.yml
+++ b/.github/workflows/simple-test.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   test:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Simple test
         run: echo "✅ Runner works!"
