--- a/.github/workflows/production-pipeline.yml
+++ b/.github/workflows/production-pipeline.yml
@@ -165,6 +165,8 @@ jobs:
     needs: build-backend-image
     runs-on: [self-hosted, kubernetes]
     if: github.ref == 'refs/heads/main'
+    env:
+      RUNNER_TOKEN: ${{ secrets.RUNNER_TOKEN }}
     steps:
       - uses: actions/checkout@v4
       
@@ -198,6 +200,8 @@ jobs:
     needs: k8s-deploy
     runs-on: [self-hosted, kubernetes]
     if: github.ref == 'refs/heads/main'
+    env:
+      RUNNER_TOKEN: ${{ secrets.RUNNER_TOKEN }}
     steps:
       - uses: actions/checkout@v4
       
